Error al leer pem en jar solucionado